--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "body-parser": "^1.20.0",
     "cookie-parser": "^1.4.6",
     "ejs": "^3.1.8",
-    "express": "^4.18.1",
-    "express-session": "^1.17.3"
+    "express": "^4.18.2",
+    "express-session": "^1.17.3",
+    "express-validator": "^6.14.2",
+    "validator": "^13.7.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.19"
