--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "express-validator": "^6.14.2",
+    "mysql2": "^2.3.3",
+    "sequelize": "^6.25.7",
     "validator": "^13.7.0"
   },
   "devDependencies": {
