--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "validator": "^13.7.0"
   },
   "devDependencies": {
-    "nodemon": "^2.0.19"
+    "nodemon": "^2.0.19",
+    "typescript": "^4.9.4"
   }
 }
