--- a/AM-FrontEnd/angular.json
+++ b/AM-FrontEnd/angular.json
@@ -60,7 +60,8 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "AM-FrontEnd:build:production"
+              "browserTarget": "AM-FrontEnd:build:production",
+              "proxyConfig": "proxy.conf.json"
             },
             "development": {
               "browserTarget": "AM-FrontEnd:build:development"
